# Next

./: .dockerignore  .editorconfig  .gitignore  CLAUDE.md  Dockerfile  README.md  build.bat  flask-backend.spec  fly.toml  start.bat  start.sh
.claude/commands/: build.md  (+5 more)
assets/: manifest.json
backend/: app.py
data/: quotes.txt  routines.json  todos.json
docs/: PENDING_ACCEPTANCE.md  SPEC-027-routine-panel-redesign.md  SPEC-028-infobox-click-to-edit.md  SPEC-029-rust-backend-migration.md  SPEC-031-about-dialog.md  SPEC-034-routine-review.md  SPEC-035-web-migration.md  SPEC-button-meteor-border.md  SPEC-changelog-expand-down.md  SPEC-changelog-horizontal.md  SPEC-infobox-fixes.md  SPEC-infobox-horizontal.md  SPEC-layout-alignment.md  SPEC-layout-and-routine.md  SPEC-living-line-v2.md  SPEC-living-line.md  SPEC-matrix-lines-completed.md  SPEC-quadrant-rename.md  SPEC-quotes-file.md  SPEC-sidebar-collapse-hide.md  SPEC-task-assignee-display.md
frontend/: demo-ice-drawer.html  index.html  login.html  sw.js
scripts/: build.bat  release.bat
server/: Cargo.toml
server/src/: auth.rs  db.rs  lib.rs  main.rs  state.rs  test_helpers.rs
server/src/models/: collaboration.rs  contact.rs  conversation.rs  english.rs  expense.rs  friend.rs  mod.rs  reminder.rs  review.rs  routine.rs  todo.rs  trip.rs
server/src/routes/: admin.rs  chat.rs  collaborate.rs  contacts.rs  conversations.rs  english.rs  expenses.rs  friends.rs  mod.rs  moment.rs  notifications.rs  pandora.rs  push.rs  quotes.rs  reminders.rs  reviews.rs  routine_collab.rs  routines.rs  todos.rs  trips.rs
server/src/services/: claude.rs  collaboration.rs  context.rs  guest_seed.rs  mod.rs  push.rs  reminder_poller.rs  tool_executor.rs
server/tests/: api_tests.rs
src-tauri/: Cargo.toml  nsis-hooks.nsi  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: calendar.rs  mod.rs  quotes.rs  reviews.rs  routines.rs  todos.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: mod.rs  review.rs  routine.rs  todo.rs
(+94 files in other folders)
