[package]
name = "next-server"
version = "1.0.0"
description = "Next - Focus on the Right Thing (Web Server)"
authors = ["Boris"]
license = "MIT"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors", "set-header"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
argon2 = { version = "0.5", features = ["rand"] }
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
tower = "0.5"
http = "1"
axum-extra = { version = "0.10", features = ["cookie"] }
time = "0.3"
reqwest = { version = "0.12", features = ["json"] }
tokio-stream = "0.1"
p256 = { version = "0.13", features = ["ecdsa", "ecdh"] }
rand_core_06 = { package = "rand_core", version = "0.6", features = ["getrandom"] }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
base64 = "0.22"
url = "2"
parking_lot = "0.12"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
